# aplay

./: CMakeLists.txt  README.md  aplay.c  formats.h  version.h
